compiler/src/test/resources/golden/errors/type_ctor_unknown_field.dawn
type Point = { x: Float, y: Float }

fn f() -> Point = Point { x: 1.0, z: 2.0 }
