compiler/src/test/resources/golden/errors/type_ctor_unknown_field.err
error: `Point` has no field `z`
  --> type_ctor_unknown_field.dawn:3:35
  |
3 | fn f() -> Point = Point { x: 1.0, z: 2.0 }
  |                                   ^^^^^^
  = hint: constructor: Point { x: Float, y: Float }
